# gocracker

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  INTRO.md  Makefile  PLAN_SANDBOXD.md  README.md  SECURITY.md  coverage.out  entitlements.plist  go.mod  go.sum  gocracker-bottleneck.md  wrangler.jsonc
.github/workflows/: ci.yml  darwin-e2e.yml  release.yml  vscode-ext.yml  windows.yml
artifacts/kernels/: gocracker-guest-minimal-arm64.config  gocracker-guest-minimal.config  gocracker-guest-standard-arm64.config  gocracker-guest-standard.config  gocracker-guest-virtiofs.config
assets/demos/: 01-alpine-oneshot.tape  02-interactive-tty.tape  03-dockerfile.tape  04-git-repo.tape  (+4 more)
docs/: API.md  ARCHITECTURE.md  ARM64_PORTING_GUIDE.md  CLI_REFERENCE.md  COMPETITIVE_ANALYSIS.md  COMPOSE.md  EXAMPLES.md  GETTING_STARTED.md  NETWORKING.md  SNAPSHOTS.md  TROUBLESHOOTING.md  VALIDATED_PROJECTS.md  VFIO_GPU_PASSTHROUGH_PLAN.md  darwin.md  perf-snapshot-2026-05-06.md
sandboxes/sdk/python/: README.md  pyproject.toml
sandboxes/sdk/python/gocracker/: __init__.py  client.py  toolbox.py
site/: 404.html  _headers  index.html  style.css
tools/: bench-cold-start.sh  bench-node-tti.sh  bench-node-warm.sh  build-guest-kernel-arm64.sh  build-guest-kernel-darwin.sh  build-guest-kernel.sh  check-host-devices.sh  coverage-repo.sh  materialize-compose-envfiles.go  materialize-compose-envfiles_test.go  materialize_extra_test.go  prepare-kernel.sh  refresh-external-manifest-refs.py  tools.go  trace-dev-access.sh  update-external-sweep-report.py  validate-external-candidates.py
(+669 files in other folders)
