[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gocracker"
version = "0.1.0"
description = "Python SDK for gocracker microVM sandboxes"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "gocracker contributors"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: POSIX :: Linux",
]

# Zero runtime dependencies — the SDK is stdlib-only (urllib +
# socket) so it drops into any Python env without pip installs.

[project.urls]
Homepage = "https://github.com/misaelzapata/gocracker"

[tool.hatch.build.targets.wheel]
packages = ["gocracker"]
